# agent-os

./: a2a_agent_with_tools.py  agentos_config.yaml  main_agentos.py  pyproject.toml
a2asrv/: a2a_agent_with_tools.py  a2aclient.py  agentos_client.py
agents/: basic_agent.py  basic_agents.yaml  demo_agent_state.py  demo_imagegen.py  finance.py  know_agent.py  mcp_agent.py
agents/estimation/: __init__.py
app/api/: agent.py  sse.py
app/components/: chat.py  log.py  sidebar.py  user_input.py
app/pages/: 2_Teams.py  __init__.py
clients/: agentos_basic_client.py
instructions/: pricing_guidance.md  resourcing_guidance.md
lib/: __init__.py  database.py  knowledge.py  loggin.py  model.py  text_utils.py
mcp_gen/: client.py  server.py  sse.py
mcp_gen/staffing/: __init__.py
mcp_gen/weather/: __init__.py
scratch/: excel_win32.py  ica_test.py  knowledge1.py  memorytest.ipynb  my_os.py
studio/: registry.py
team/: solutioning.py
tmp/: agents.db
tools/: resources.py
utils/: db_migrations.py
