[project]
name = "agent-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.22",
    "ag-ui-protocol>=0.1.9",
    "agno>=2.0.6",
    "ddgs>=9.6.0",
    "fastapi>=0.116.2",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lancedb>=0.25.0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.14.0",
    "ngrok>=1.7.0",
    "ollama>=0.5.4",
    "openai>=1.108.0",
    "pgvector>=0.4.1",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.9",
    "pydash>=8.0.5",
    "pyjwt>=2.11.0",
    "pypdf>=6.0.0",
    "python-box>=7.3.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "uvicorn>=0.36.0",
    "yfinance>=1.1.0",
]
